First batch of changes, per review

--- a/_content/index.html
+++ b/_content/index.html
@@ -3,16 +3,16 @@ title: Home - dbt Learn
 permalink: /
 class: homepage
 h1: "Upgrade your analytics skills with dbt Learn"
-h2: "If you know how to write SQL, you are ready to learn dbt."
+h2: "If you can write SQL, you are ready to learn dbt."
 types:
   - name: "Public Courses"
     description: "Public dbt Learn is a two-day intensive course including live instruction and working sessions. Classes are currently facilitated via Zoom across different time zones."
-    buttonText: "Start learning dbt right now"
+    buttonText: "Register"
     buttonLink: /public
   - name: "On Demand"
     highlightClass: "highlight"
     description: "Learn dbt at your own pace whether you are an experienced data engineer or just starting a new path in analytics &mdash; for free."
-    buttonText: "Start learning now"
+    buttonText: "Get started"
     buttonLink: //courses.getdbt.com
   - name: "Private Courses"
     description: "Interested in private training for your team? We would love to learn more about your team to select the right training experience for you."
@@ -64,16 +64,17 @@ stats:
 		</div><!--/.container -->
 	</div>
 </section><!-- /.top-promo-->
-<section class="bg-white section student-testimonial">
+<section class="bg-white section student-testimonial text-navy-darker">
     <div class="mask mask-nw text-navy-darker"></div>
-    <div class="container testimonial">
+    <div class="container testimonial ">
         <div class="quote top"><img src="//www.getdbt.com/ui/img/ecosystem/detail-quote-top.png" /></div>
         <div class="quote bottom"><img src="//www.getdbt.com/ui/img/ecosystem/detail-quote-bottom.png" /></div>
-        <div class="row bg-white text-nav">
+        <div class="row bg-white">
             <div class="col-md-8">
                 <div class="text-contain">
-                    <h4>{{page.quote.headline}}</h4>
-                    <p>{{page.quote.paragraph}}</p>
+                    <p class="text-large">
+                        {{page.quote.headline}}
+                    </p>
                 </div>
             </div>
             <div class="col-md-4">
