--- a/_content/index.html
+++ b/_content/index.html
@@ -36,6 +36,7 @@ stats:
 ---
 
 <section class="top-promo bg-navy-darker">
+    <div class="mask mask-ne text-white"></div>
 	<div class="section-lg text-white text-navy-lightest">
 		<div class="container">
 			<div class="row">
@@ -55,7 +56,7 @@ stats:
                         <div class="card-footer">
                             <a href="{{type.buttonLink}}" class="btn btn-primary btn-block radius {% unless type.highlightClass %}btn-outline{% endunless %}" title="{{type.buttonText}}">
                                 {{type.buttonText}} 
-                                <i data-icon="right-open-mini" data-toggle="tooltip" title="right-open-mini" data-placement="right"></i>
+                                <i data-icon="right-open-mini" title="" alt=""></i>                            
                             </a>
                         </div>
                     </div>
