--- a/_content/public.html
+++ b/_content/public.html
@@ -35,7 +35,7 @@ sectionExpect:
         - name: "Office Hours to meet with your instructors 1-2 weeks after the course"
         - name: "A verified dbt Learn certificate"
   buttonText: "View upcoming events"
-  buttonLink: "https://events.getdbt.com/"
+  buttonLink: "#upcoming-events"
 ---
 
 <div class="bg-navy-darker top-promo">
@@ -122,6 +122,10 @@ sectionExpect:
 				<div class="col-lg-12">
 					<div class="text-contain text-center">
                         <h3 class="h2">Upcoming Events</h3>
+
+                        <!-- Ticket Tailor Widget. Paste this in to your website where you want the widget to appear. Do no change the code or the widget may not work properly. -->
+<div class="tt-widget"><div class="tt-widget-fallback"><p><a href="https://www.tickettailor.com/all-tickets/fishtownanalytics/ref/website_widget/" target="_blank">Click here to buy tickets</a><br /><small><a href="https://www.tickettailor.com?rf=wdg" class="tt-widget-powered">Sell tickets online with Ticket Tailor</a></small></p></div><script src="https://www.tickettailor.com/js/widgets/min/widget.js" data-url="https://www.tickettailor.com/all-tickets/fishtownanalytics/ref/website_widget/" data-type="inline" data-inline-minimal="false" data-inline-show-logo="true"  data-inline-bg-fill="true"></script></div>
+<!-- End of Ticket Tailor Widget -->
                     </div>
                 </div>
             </div>
