Many tiny fixes

--- a/_lessons/dbt-fundamentals.html
+++ b/_lessons/dbt-fundamentals.html
@@ -251,7 +251,7 @@ class: subtitle
 
 --
 
-* **dbt CLI:** Check out the `target/` directory and the `logs/` file
+* Check out the `target/` directory and the `logs/` file
 * **dbt Cloud:** Select the "Details" view within a run
 
 --
