--- a/_lessons/incremental.html
+++ b/_lessons/incremental.html
@@ -673,7 +673,7 @@ We're going to talk about this next :)
 - Your data changes constantly: new columns, renamed columns, etc.
 - Your data is updated in unpredictable ways
 - Your transformation performs comparisons or calculations that require
-other_ rows (table + view)
+_other_ rows
 
 ---
 
