--- a/_lessons/testing.html
+++ b/_lessons/testing.html
@@ -172,7 +172,11 @@ models:
       - name: status
         tests:
           - accepted_values:
-              values: ['placed', 'shipped', 'completed', 'returned']
+              values:
+                - placed
+                - shipped
+                - completed
+                - returned
 ```
 ]
 
