Redo nav, update NPS score, mobile styling

--- a/_content/index.html
+++ b/_content/index.html
@@ -25,7 +25,7 @@ quote:
   photo: "/ui/img/wtsu.jpeg"
 stats:
   - name: Net Promoter Score
-    number: "38"
+    number: "50"
     icon: /ui/img/plus@2x.png
   - name: Students Trained
     number: "450"
@@ -36,7 +36,7 @@ stats:
 ---
 
 <section class="top-promo bg-navy-darker">
-    <div class="mask mask-ne text-white"></div>
+    <div class="mask mask-ne text-white hidden-xs"></div>
 	<div class="section-lg text-white text-navy-lightest">
 		<div class="container">
 			<div class="row">
