--- a/_content/public.html
+++ b/_content/public.html
@@ -72,7 +72,7 @@ sectionExpect:
 			<div class="row">
 				<div class="col-lg-12">
 					<div class="text-contain text-center text-navy-darkest">
-						<h3 id="about" class="h2">{{page.sectionLearn.headline}}</h3>
+						<h3>{{page.sectionLearn.headline}}</h3>
 						<p class="text-left">{{page.sectionLearn.desc}}</p>
 						<ul class="list-cols text-left">
 							{% for bullet in page.sectionLearn.bullets %}
@@ -93,7 +93,7 @@ sectionExpect:
 			<div class="row">
 				<div class="col-lg-12">
 					<div class="text-contain text-center text-navy-darkest">
-                        <h3 class="h2">{{page.sectionExpect.headline}}</h3>
+                        <h3>{{page.sectionExpect.headline}}</h3>
                             {% for subsection in page.sectionExpect.subsections %}
                                 <h4 class="text-left">{{subsection.title}}:</h4>
                                 <ul class="text-left text-gray">
@@ -121,11 +121,11 @@ sectionExpect:
 			<div class="row">
 				<div class="col-lg-12">
 					<div class="text-contain text-center">
-                        <h3 class="h2">Upcoming Events</h3>
+                        <h3>Upcoming Events</h3>
 
                         <!-- Ticket Tailor Widget. Paste this in to your website where you want the widget to appear. Do no change the code or the widget may not work properly. -->
-<div class="tt-widget"><div class="tt-widget-fallback"><p><a href="https://www.tickettailor.com/all-tickets/fishtownanalytics/ref/website_widget/" target="_blank">Click here to buy tickets</a><br /><small><a href="https://www.tickettailor.com?rf=wdg" class="tt-widget-powered">Sell tickets online with Ticket Tailor</a></small></p></div><script src="https://www.tickettailor.com/js/widgets/min/widget.js" data-url="https://www.tickettailor.com/all-tickets/fishtownanalytics/ref/website_widget/" data-type="inline" data-inline-minimal="false" data-inline-show-logo="true"  data-inline-bg-fill="true"></script></div>
-<!-- End of Ticket Tailor Widget -->
+                        <div class="tt-widget"><div class="tt-widget-fallback"><p><a href="https://www.tickettailor.com/all-tickets/fishtownanalytics/ref/website_widget/" target="_blank">Click here to buy tickets</a><br /><small><a href="https://www.tickettailor.com?rf=wdg" class="tt-widget-powered">Sell tickets online with Ticket Tailor</a></small></p></div><script src="https://www.tickettailor.com/js/widgets/min/widget.js" data-url="https://www.tickettailor.com/all-tickets/fishtownanalytics/ref/website_widget/" data-type="inline" data-inline-minimal="false" data-inline-show-logo="true"  data-inline-bg-fill="true"></script></div>
+                        <!-- End of Ticket Tailor Widget -->
                     </div>
                 </div>
             </div>
