A bunch of fixes for mobile styling; also some code cleanup

--- a/_content/index.html
+++ b/_content/index.html
@@ -36,7 +36,7 @@ stats:
 ---
 
 <section class="top-promo bg-navy-darker">
-    <div class="mask mask-ne text-white hidden-xs"></div>
+    <div class="mask mask-ne text-white"></div>
 	<div class="section-lg text-white text-navy-lightest">
 		<div class="container">
 			<div class="row">
@@ -61,7 +61,7 @@ stats:
                         </div>
                     </div>
                 {% endfor %}
-            </div><!-- /.row -->
+            </div><!-- /.flex-row -->
 		</div><!--/.container -->
 	</div>
 </section><!-- /.top-promo-->
