--- a/_jumpstart/kickoff.html
+++ b/_jumpstart/kickoff.html
@@ -17,6 +17,26 @@ class: title, center, middle
 
 ---
 
+---
+
+# dbt & the Modern Data Stack
+
+<img src="/ui/img/dbt-overview.png" width = 100%>
+
+
+---
+
+# Quick Overview of a Git Workflow
+
+Key Terms:
+- Branches: Master/Main vs. Development (feature, fix, etc.)
+- "Create new branch"
+- "Save" vs. "Commit"
+- "Open Pull Request"
+- "Merge" in GitHub
+- Repeat 
+
+---
 class: subtitle, center, middle
 
 
@@ -33,8 +53,8 @@ Asynchronous Learn & Synchronous Review
 ## Asynchronous
 
 - Instructional Videos + Practice Exercises
-- Submit Pull Request
 - Check for Understanding
+- Logging Questions
 ]
 
 --
@@ -49,22 +69,21 @@ Asynchronous Learn & Synchronous Review
 
 ---
 
-## Topics by Week
+## Topics by Day
 
 --
 
 .left-column[
-### Week 1 Topics
+### Day 1 Topics
 
 - Who is an Analytics Engineer?
-- Set up dbt Cloud
 - Models
 ]
 
 --
 
 .right-column[
-### Week 2 Topics
+### Day 2 Topics
 
 - Tests
 - Docs
@@ -74,12 +93,12 @@ Asynchronous Learn & Synchronous Review
 
 ---
 
-## Topics by Week
+## Topics by Day
 
 --
 
 .left-column[
-### Week 3 Topics
+### Day 3 Topics
 
 - Jinja
 - Macros
@@ -88,26 +107,18 @@ Asynchronous Learn & Synchronous Review
 --
 
 .right-column[
-### Week 4 Topics
+### Day 4 Topics
 
 - Materializations
 - Analyses + Seeds
 ]
----
-
-class: subtitle
-
-# Quick Overview of Asynchronous Sessions
-- <a href="index.html" target="_blank">Instructional Video and Practice Exercises</a>
-- <a href="index.html#week1" target="_blank">Submitting Pull Requests</a>
-- <a href="index.html" target="_blank">Check for Understanding Forms</a>
 
 ---
 
 # Questions while you are working?
 
 - Use the private Slack channel for team collaboration.
-- Record questions to address in Office Hours in the week's Google Form.
+- Record questions to address in Office Hours in the Checkpoint
 - If you are experiencing a bug or issue that you cannot resolve on your own, reach out in dbt Cloud via Intercom.
 
 ---
