dont use full refresh for massive data

--- a/_lessons/incremental.html
+++ b/_lessons/incremental.html
@@ -657,6 +657,7 @@ Bigger datasets (and Big Data technologies) are different cost-optimization prob
 - Always replace data at the _partition level_.
 - No unique keys.
 - Targeted lookback? No way: too much extra data to scan.
+- Avoid full refreshes
 
 We're going to talk about this next :)
 
