typo in dbtonic jinja

--- a/_lessons/dbtonic-jinja.html
+++ b/_lessons/dbtonic-jinja.html
@@ -30,7 +30,7 @@ We've added to the Jinja library!
 &nbsp;
 
 Use it always! This is how dbt:
-* Mananages environments
+* Manages environments
 * Infers all model dependencies (DAG)
 
 {% endraw %}
