revert days to weeks in headings

--- a/_jumpstart/kickoff.html
+++ b/_jumpstart/kickoff.html
@@ -14,6 +14,8 @@ class: title, center, middle
 - Introductions
 - Where are you calling from? (city + room)
 - What does your day-to-day work look like?
+- Video on if possible for introductions
+
 
 ---
 
@@ -69,12 +71,12 @@ Asynchronous Learn & Synchronous Review
 
 ---
 
-## Topics by Day
+## Topics by Week
 
 --
 
 .left-column[
-### Day 1 Topics
+### Week 1 Topics
 
 - Who is an Analytics Engineer?
 - Models
@@ -83,7 +85,7 @@ Asynchronous Learn & Synchronous Review
 --
 
 .right-column[
-### Day 2 Topics
+### Week 2 Topics
 
 - Tests
 - Docs
@@ -98,7 +100,7 @@ Asynchronous Learn & Synchronous Review
 --
 
 .left-column[
-### Day 3 Topics
+### Week 3 Topics
 
 - Jinja
 - Macros
@@ -107,7 +109,7 @@ Asynchronous Learn & Synchronous Review
 --
 
 .right-column[
-### Day 4 Topics
+### Week 4 Topics
 
 - Materializations
 - Analyses + Seeds
