update kickoff slides

--- a/_jumpstart/kickoff.html
+++ b/_jumpstart/kickoff.html
@@ -95,7 +95,7 @@ Asynchronous Learn & Synchronous Review
 
 ---
 
-## Topics by Day
+## Topics by Week
 
 --
 
@@ -127,3 +127,12 @@ Asynchronous Learn & Synchronous Review
 
 <img src="/ui/img/intercom_cloud.png" width = 100%>
 
+---
+
+# Deadlines and Pull Request Groups
+
+- All of our office hours are scheduled for Mondays.
+- The goal is to complete the asynchronous sessions by Friday of each week.
+- This includes: Watching the videos, completing practice exercises, answering surveys and submitting a pull request to a peer.*
+- *This will allow us to simulate collaborating with a GitHub workflow - much like you will when using dbt as a team.
+- We will model how to review a pull request during out first office hours.
