update reference for public picture

--- a/_content/public.html
+++ b/_content/public.html
@@ -66,7 +66,7 @@ sectionExpect:
 		<div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <img src="{{site.baseurl}}/ui/img/public-learn-photo.jpg" />
+                    <img src="/ui/img/public-learn-photo.jpg" />
                 </div>
             </div><!-- /.row -->
 			<div class="row">
