--- a/_jumpstart/kickoff.html
+++ b/_jumpstart/kickoff.html
@@ -131,8 +131,8 @@ Asynchronous Learn & Synchronous Review
 
 # Deadlines and Pull Request Groups
 
-- All of our office hours are scheduled for Mondays.
-- The goal is to complete the asynchronous sessions by Friday of each week.
+- The goal is to complete the asynchronous sessions 24 hours before each Office Hours
 - This includes: Watching the videos, completing practice exercises, answering surveys and submitting a pull request to a peer.*
+- This will allow instructors to shape the office hours agenda for your team.
 - *This will allow us to simulate collaborating with a GitHub workflow - much like you will when using dbt as a team.
 - We will model how to review a pull request during out first office hours.
