Hotfix from Lucy on behalf of librarians everywhere

--- a/_lessons/docs.html
+++ b/_lessons/docs.html
@@ -47,7 +47,7 @@ class: subtitle, middle, center
 * The goal is to empower analyst-researchers.
 --
 
-* _The libarian and the card catalog do not replace each other—they reinforce and enable each other!_
+* _The librarian and the card catalog do not replace each other—they reinforce and enable each other!_
 
 ### Analytics is the organization of an organization's information.
 
