--- a/_content/public.html
+++ b/_content/public.html
@@ -1,5 +1,5 @@
 ---
-title: Analytics Engineering with dbt - 2-Day Live Course | dbt Learn
+title: Analytics Engineering with data build tool - 2-Day Live Course | dbt Learn
 description: This course will get you set up with dbt (data build tool) and the fundamentals of modeling, testing, documentation, and deployment.
 permalink: /public
 class: public
