Squash typo, thanks Lucy

--- a/_lessons/intro-to-jinja.html
+++ b/_lessons/intro-to-jinja.html
@@ -89,7 +89,7 @@ class: subtitle
 
 * We will see some code, try to predict the output.
 * Raise your hand on Zoom to give your answer and explanation.
-* This thinking is new for some people - let's help each other get acquanted with jinja!
+* This thinking is new for some people - let's help each other get acquainted with jinja!
 
 ???
 
