--- a/_content/index.html
+++ b/_content/index.html
@@ -1,5 +1,5 @@
 ---
-title: Learn analytics engineering with data build tool | dbt Learn
+title: Learn analytics engineering with dbt | dbt Learn
 description: Choose from a 2-day live course or a self-paced program to learn the fundamentals of using dbt for data modeling, testing, documentation, and deployment.
 permalink: /
 class: homepage
