--- a/_jumpstart/kickoff.html
+++ b/_jumpstart/kickoff.html
@@ -132,7 +132,6 @@ Asynchronous Learn & Synchronous Review
 # Deadlines and Pull Request Groups
 
 - The goal is to complete the asynchronous sessions 24 hours before each Office Hours
-- This includes: Watching the videos, completing practice exercises, answering surveys and submitting a pull request to a peer.*
-- This will allow instructors to shape the office hours agenda for your team.
-- *This will allow us to simulate collaborating with a GitHub workflow - much like you will when using dbt as a team.
-- We will model how to review a pull request during out first office hours.
+- This includes: Watching the videos, completing practice exercises, and answering surveys.
+- This will allow instructors to shape the office hours during the morning of the training.
+- Pro Tip: Consider blocking 3 hours on your calendar between sessions to complete the work.  It's a lot easier to dive deep for 1 three-hour session than 3 one-hour sessions.
