add scholarship info

--- a/_content/public.html
+++ b/_content/public.html
@@ -115,15 +115,16 @@ sectionExpect:
 <section id="upcoming-events" class="bg-white upcoming-events">
     <div class="mask mask-nw text-silver-light"></div>
     <div class="section">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12">
-					<div class="text-contain text-center">
-                        <h3>Upcoming Events</h3>
-
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="text-contain text-center">
+                        <h3>{{page.sectionEnroll.headline}}</h3>
                         <!-- Ticket Tailor Widget. Paste this in to your website where you want the widget to appear. Do no change the code or the widget may not work properly. -->
-                        <div class="tt-widget"><div class="tt-widget-fallback"><p><a href="https://www.tickettailor.com/all-tickets/fishtownanalytics/ref/website_widget/" target="_blank">Click here to buy tickets</a><br /><small><a href="https://www.tickettailor.com?rf=wdg" class="tt-widget-powered">Sell tickets online with Ticket Tailor</a></small></p></div><script src="https://www.tickettailor.com/js/widgets/min/widget.js" data-url="https://www.tickettailor.com/all-tickets/fishtownanalytics/ref/website_widget/" data-type="inline" data-inline-minimal="false" data-inline-show-logo="true"  data-inline-bg-fill="true"></script></div>
+                        <div style="margin: 40px" class="tt-widget"><div class="tt-widget-fallback"><p><a href="https://www.tickettailor.com/all-tickets/fishtownanalytics/ref/website_widget/" target="_blank">Click here to buy tickets</a><br /><small><a href="https://www.tickettailor.com?rf=wdg" class="tt-widget-powered">Sell tickets online with Ticket Tailor</a></small></p></div><script src="https://www.tickettailor.com/js/widgets/min/widget.js" data-url="https://www.tickettailor.com/all-tickets/fishtownanalytics/ref/website_widget/" data-type="inline" data-inline-minimal="false" data-inline-show-logo="true"  data-inline-bg-fill="true"></script></div>
                         <!-- End of Ticket Tailor Widget -->
+                        <a href="" class="btn btn-default radius" target="_blank"><i data-icon="graduation-cap" title="" alt=""></i>{{page.sectionEnroll.scholarshipButton}}</a>
+                        <p><strong>{{page.sectionEnroll.scholarshipDesc}}</strong></p>
                     </div>
                 </div>
             </div>
