fix front matter

--- a/_content/public.html
+++ b/_content/public.html
@@ -37,6 +37,10 @@ sectionExpect:
         - name: "A verified dbt Learn certificate"
   buttonText: "View upcoming events"
   buttonLink: "#upcoming-events"
+sectionEnroll:
+  headline: Upcoming Events
+  scholarshipButton: Diversity Scholarship
+  scholarshipDesc: We are committed to making dbt, and knowledge of analytics engineering, accessible to as many people as possible. To that end, we have a diversity scholarship available to decrease or waive the cost of participation.
 ---
 
 <div class="bg-navy-darker top-promo">
